fix font size on mobile format

--- a/style/gradeAssignments.css
+++ b/style/gradeAssignments.css
@@ -401,4 +401,8 @@ body>div>main>div:nth-child(3)>div.kurser>ul>li:nth-child(3) {
   .cardbutton {
     padding: 4px 7px;
   }
+
+  body > div > main > div.table > div.kurser > ul > li> a {
+    font-size: 22px;
+  }
 }
